# a2-videostreaming-via-cdn

./: .gitignore  README.md  _config.yml  chrome  launch_webserver  sample_geography.txt  sample_round_robin.txt  webserver.py
content_server/: pyproject.toml  webserver.py
content_server/static/: index.html  set_bandwidth.html
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt
cpp/src/common/: CMakeLists.txt  LoadBalancerProtocol.h  network_utils.cpp  network_utils.h
cpp/src/loadBalancer/: CMakeLists.txt
cpp/src/miProxy/: CMakeLists.txt
cpp/src/nameserver/: CMakeLists.txt
util/: queryLoadBalancer  queryLoadBalancer_apple-arm  submit.sh
videoserver/: launch_videoservers.py  pyproject.toml  videoserver.py
videoserver/static/: index.html
videoserver/static/css/: styles.css
videoserver/static/videos/: .gitattributes  michigan-hype-video.tar.REMOVED.git-id  tears-of-steel.tar.REMOVED.git-id  tears-of-steel.tar.gz.REMOVED.git-id
videoserver/templates/: set_bandwidth.html  video_player.html
web/: vod.tar.REMOVED.git-id
